crates/mega-evm/tests/satin/snapshots/satin__stops__nested_call_block_env_access_child_oog.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&views"
---
{
  "plain": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20002617)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001313739",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20001549,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 799972720,
      "floor": 15000,
      "gas_used": 20028829
    },
    "result_gas": {
      "total_gas_spent": 20028829,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 799972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20002617,
      "used": 19986549
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000500000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "recorded": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20002617)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001313739",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20001549,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 799972720,
      "floor": 15000,
      "gas_used": 20028829
    },
    "result_gas": {
      "total_gas_spent": 20028829,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 799972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20002617,
      "used": 19986549
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000500000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
