crates/mega-evm/tests/satin/snapshots/satin__stops__non_binding_detention_reports_a_normal_out_of_gas.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "halt",
    "reason": "Base(OutOfGas(Basic))",
    "output": null,
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 24972720,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 25000000
  },
  "result_gas": {
    "total_gas_spent": 25000000,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000500000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000bef000": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001b": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    }
  }
}
