crates/mega-evm/tests/satin/snapshots/satin__stops__state_revert_when_exceeding_limit.snap
---
source: crates/mega-evm/tests/satin/stops.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "revert",
    "reason": "MegaLimitExceeded(DataSize, 311)",
    "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000137",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 21000,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 21000,
    "gas_used": 48280
  },
  "result_gas": {
    "total_gas_spent": 48280,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 21000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": {
    "kind": "DataSize",
    "limit": 311,
    "used": 510
  },
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000500000": {
      "balance": "0x2710",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000bef000": "unchanged",
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
